# taku

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.github/workflows/: ci.yml  codeql-actions.yml  codeql-rust.yml  docs.yml  release.yml  scoop.yml
bucket/: taku.json
crates/taku/: Cargo.toml
crates/taku-api/: Cargo.toml
crates/taku-api/src/: lib.rs  steps.rs
crates/taku-cmd/: Cargo.toml
crates/taku-cmd/src/: lib.rs
crates/taku-env/: Cargo.toml
crates/taku-env/src/: lib.rs
crates/taku-fs/: Cargo.toml
crates/taku-fs/src/: lib.rs
crates/taku-net/: Cargo.toml
crates/taku-net/src/: http.rs  lib.rs
crates/taku-ops/: Cargo.toml
crates/taku-ops/src/: lib.rs
crates/taku-runtime/: Cargo.toml
crates/taku-runtime/src/: diagnostic.rs  dotenv.rs  error.rs  exec.rs  fmtstr.rs  incremental.rs  lib.rs  plan.rs  registry.rs  report.rs  schedule.rs  serve.rs  srcmap.rs  state.rs  taskdef.rs  validate.rs
crates/taku-runtime/src/diagnostic/: ansi.rs  convert.rs  json.rs
crates/taku-shell/: Cargo.toml
crates/taku-shell/src/: lib.rs
crates/taku-ssh/: Cargo.toml
crates/taku-ssh/src/: exec.rs  host.rs  lib.rs  remote.rs  session.rs  tunnel.rs  util.rs
crates/taku/src/: cli.rs  console.rs  main.rs
crates/taku/wix/: main.wxs
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: examples.md  getting-started.md  installation.md  introduction.md  sandbox.md  tasks.md
website/docs/api/: cmd.md  env.md  fs.md  index.md  net.md  sh.md  ssh.md
website/docs/guide/: cli.md  incremental.md  services.md  steps.md  tasks.md  variables.md
website/i18n/ru/docusaurus-plugin-content-docs/current/: examples.md  getting-started.md  installation.md  introduction.md  sandbox.md  tasks.md
website/i18n/ru/docusaurus-plugin-content-docs/current/api/: cmd.md  env.md  fs.md  index.md  net.md  sh.md  ssh.md
website/i18n/ru/docusaurus-plugin-content-docs/current/guide/: cli.md  incremental.md  services.md  steps.md  tasks.md  variables.md
website/src/css/: custom.css
