[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.2-alpha"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Lua engine. `vendored` builds Lua from source (no system Lua needed)
mlua = { version = "0.11", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }

taku-runtime = { path = "crates/taku-runtime" }
taku-fs = { path = "crates/taku-fs" }
taku-net = { path = "crates/taku-net" }
taku-shell = { path = "crates/taku-shell" }
taku-ssh = { path = "crates/taku-ssh" }
taku-env = { path = "crates/taku-env" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "unwind"
