[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["taidaru"]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/taidaru/taku"
homepage = "https://taidaru.github.io/taku/"
documentation = "https://taidaru.github.io/taku/"
description = "A task runner powered by Rust and scripted in Lua."
readme = "README.md"
keywords = ["task-runner", "lua", "automation", "build", "sandbox"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2024_compatibility = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Lua engine. `vendored` builds Lua from source (no system Lua needed)
mlua = { version = "0.11", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }

taku-runtime = { path = "crates/taku-runtime" }
taku-api = { path = "crates/taku-api" }
taku-fs = { path = "crates/taku-fs" }
taku-net = { path = "crates/taku-net" }
taku-shell = { path = "crates/taku-shell" }
taku-env = { path = "crates/taku-env" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "unwind"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
