[package]
name = "taku-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared API registration plumbing for taku."
publish = false

[lints]
workspace = true

[dependencies]
mlua.workspace = true
