[package]
name = "taku-env"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Environment-variable API for taku."
publish = false

[lints]
workspace = true

[dependencies]
mlua.workspace = true
taku-api.workspace = true
dotenvy = "0.15"
