[package]
name = "taku-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Filesystem API for taku."
publish = false

[lints]
workspace = true

[dependencies]
mlua.workspace = true
taku-api.workspace = true
