[package]
name = "taku-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Networking API for taku."
publish = false

[lints]
workspace = true

[dependencies]
mlua.workspace = true
taku-api.workspace = true
ureq = "3.3.0"
sha2 = "0.10"
