[package]
name = "taku-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mlua.workspace = true
taku-api.workspace = true
taku-fs.workspace = true
taku-shell.workspace = true
taku-env.workspace = true
taku-net.workspace = true
taku-ssh.workspace = true
