[package]
name = "taku-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sandboxed Lua runtime and task scheduler for taku."
publish = false

[lints]
workspace = true

[dependencies]
mlua.workspace = true
taku-api.workspace = true
dotenvy = "0.15"
glob = "0.3"
shlex = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
taku-fs.workspace = true
taku-cmd.workspace = true
taku-net.workspace = true
taku-env.workspace = true
taku-ops.workspace = true
